[package]
name = "msr-commit-viewer"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>"]
edition = "2018"
description = "View MSR commits from keywords YAML file and check commit contents"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_yaml = "0.8.11"
async-std = { version = "1.5.0", features = ["attributes", "unstable"] }
anyhow = "1.0.27"
clap = "2.33.0"
regex = "1.3.5"
surf = "1.0.3"
serde_json = "1.0.48"
cursive = "0.14.0"
cursive-async-view = "0.3.2"
percent-encoding = "2.1.0"
cursive-tabs = "0.4.1"
