[package]
name = "igitt"
version = "0.1.0"
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes@spacesnek.rocks>"]
edition = "2018"
description = "View git commits from keywords YAML file and rate commit contents"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_yaml = "0.8.11"
async-std = { version = "1.5.0", features = ["attributes", "unstable"] }
anyhow = "1.0.27"
clap = "2.33.0"
regex = "1.3.6"
surf = "1.0.3"
serde_json = "1.0.48"
cursive-async-view = "0.3.3"
percent-encoding = "2.1.0"
cursive-tabs = "0.4.1"
cursive-aligned-view = "0.2.1"
ansi_term = "0.12.1"

# patch for static dependencies
curl = { version = "0.4.25", features = ["static-ssl"] }
isahc = { version = "0.8", default-features = false, features = ["http2", "static-curl"] }

[dependencies.cursive]
version = "0.14.0"
default-features = false
features = ["termion-backend"]

[dev-dependencies]
flexi_logger = "0.15.2"
